RESOLVED FIXED217459
[Media in GPU Process] RemoteAudioSession::category() returns an incorrect value after category changing
https://bugs.webkit.org/show_bug.cgi?id=217459
Summary [Media in GPU Process] RemoteAudioSession::category() returns an incorrect va...
Peng Liu
Reported 2020-10-07 17:28:56 PDT
RemoteAudioSession::category() returns an incorrect value after category changing
Attachments
Patch (6.40 KB, patch)
2020-10-07 17:36 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2020-10-07 17:36:30 PDT
EWS
Comment 2 2020-10-08 11:19:00 PDT
Committed r268196: <https://trac.webkit.org/changeset/268196> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410804 [details].
Radar WebKit Bug Importer
Comment 3 2020-10-08 11:19:19 PDT
Note You need to log in before you can comment on or make changes to this bug.