RemoteAudioSession::category() returns an incorrect value after category changing https://bugs.webkit.org/show_bug.cgi?id=217459

Reviewed by Youenn Fablet.

Source/WebKit:

No new tests, covered by existing tests.

* WebProcess/GPU/media/RemoteAudioSession.cpp:
(WebKit::RemoteAudioSession::setCategory): Update `m_configuration.category`
and `m_configuration.routeSharingPolicy` so that RemoteAudioSession::category()
will return the correct value.
* WebProcess/GPU/media/RemoteAudioSession.h:

LayoutTests:

* gpu-process/TestExpectations: Minor clean-up and unskip some tests after fixing
the bug of RemoteAudioSession::category().
* platform/mac/media/audio-session-category-audio-autoplay.html:


Canonical link: https://commits.webkit.org/230254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268196 268f45cc-cd09-0410-ab3c-d52691b4dbfc