Source/WebKit/WebProcess/GPU/media/RemoteAudioSession.h
@@ -76,8 +76,6 @@ private:
 
     WebProcess& m_process;
     RemoteAudioSessionConfiguration m_configuration;
-    WebCore::AudioSession::CategoryType m_category;
-    WebCore::RouteSharingPolicy m_routeSharingPolicy;
 };
 
 }
